kubernetes/Int/deployments/default/grafana/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: grafana
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`grafana.svc.noms.tv`)
          services:
            - kind: Service
              name: grafana
              port: 3000
    tls:
        secretName: production-tls
